--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			bottom: 0;
 			background-color: #1e1e1e;
 			padding: 10px 20px;
+			overflow: auto;
 		}
 		#console > br:after {
 			content: "> ";
